# pokeOS

./: .gitignore  README.md  endpoint.py  main.py  pyproject.toml  requirements.txt
local_mcp/: computeruse.py  cursor_background.py  cursor_cli.py  last.py  main.py  messages.py  music.py  photos.py
local_mcp/lib/: config.py  contacts.py  contacts_cache_dump.py  log.py  prompt_utils.py  prompts.py  retrieval.py  terms.py  text_utils.py  time_utils.py
local_mcp/models/: __init__.py  embedder.py  imessage_db.py  memory.py
