[project]
name = "poke-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp==2.12.3",
    "mcp>=1.14.0",
    "nova-act>=2.0.357.0",
    "osxphotos>=0.73.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
